@startuml

title __SERVICES VIEW's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.HomeCandidatoViewService {
            + HomeCandidatoViewService()
            # buildContent()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.HomeEmpresaViewService {
            + HomeEmpresaViewService()
            # buildContent()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        abstract class com.soundlab.dockerizedjavaapi.services.view.HomeViewService {
            + getContent()
            + getContent()
            # HomeViewService()
            {abstract} # buildContent()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.PublishVagaViewService {
            ~ modelMapper : ModelMapper
            + PublishVagaViewService()
            + publishVaga()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.RankingViewService {
            + RankingViewService()
            + getContent()
            + getResposta()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.ResponderVagaViewService {
            ~ modelMapper : ModelMapper
            + ResponderVagaViewService()
            + getContent()
            + requestAnswer()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.SignInViewService {
            + SignInViewService()
            + getContent()
            + requestSignIn()
        }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.view {
        class com.soundlab.dockerizedjavaapi.services.view.SignUpViewService {
            - modelMapper : ModelMapper
            + SignUpViewService()
            + requestSignUp()
        }
    }
  }
  

  com.soundlab.dockerizedjavaapi.services.view.HomeCandidatoViewService -up-|> com.soundlab.dockerizedjavaapi.services.view.HomeViewService
  com.soundlab.dockerizedjavaapi.services.view.HomeEmpresaViewService -up-|> com.soundlab.dockerizedjavaapi.services.view.HomeViewService
  com.soundlab.dockerizedjavaapi.services.view.HomeViewService o-- com.soundlab.dockerizedjavaapi.services.utils.StringResourcesService : stringResourcesService
  com.soundlab.dockerizedjavaapi.services.view.HomeViewService o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService
  com.soundlab.dockerizedjavaapi.services.view.PublishVagaViewService o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService
  com.soundlab.dockerizedjavaapi.services.view.RankingViewService o-- com.soundlab.dockerizedjavaapi.services.domain.RespostaService : respostaService
  com.soundlab.dockerizedjavaapi.services.view.RankingViewService o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService
  com.soundlab.dockerizedjavaapi.services.view.ResponderVagaViewService o-- com.soundlab.dockerizedjavaapi.services.domain.RespostaService : respostaService
  com.soundlab.dockerizedjavaapi.services.view.ResponderVagaViewService o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService
  com.soundlab.dockerizedjavaapi.services.view.SignInViewService o-- com.soundlab.dockerizedjavaapi.services.utils.StringResourcesService : stringResourcesService
  com.soundlab.dockerizedjavaapi.services.view.SignInViewService o-- com.soundlab.dockerizedjavaapi.services.domain.UserService : userService
  com.soundlab.dockerizedjavaapi.services.view.SignInViewService o-- com.soundlab.dockerizedjavaapi.services.domain.VagaService : vagaService
  com.soundlab.dockerizedjavaapi.services.view.SignUpViewService o-- com.soundlab.dockerizedjavaapi.services.domain.CandidatoService : candidatoService
  com.soundlab.dockerizedjavaapi.services.view.SignUpViewService o-- com.soundlab.dockerizedjavaapi.services.domain.EmpresaService : empresaService
  com.soundlab.dockerizedjavaapi.services.view.SignUpViewService o-- com.soundlab.dockerizedjavaapi.services.domain.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
